--- a/index.yaml
+++ b/index.yaml
@@ -10,25 +10,25 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used 9 times in query history.
+# Used 3 times in query history.
 - kind: Post
   properties:
   - name: ip
   - name: date
     direction: desc
 
-# Used 8 times in query history.
+# Used 3 times in query history.
 - kind: Post
   properties:
   - name: parentid
   - name: bumped
     direction: desc
 
-# Used 5 times in query history.
+# Used once in query history.
 - kind: Post
   ancestor: yes
 
-# Used 19 times in query history.
+# Used once in query history.
 - kind: Post
   ancestor: yes
   properties:
