a few minor changes

--- a/app.yaml
+++ b/app.yaml
@@ -22,6 +22,9 @@ handlers:
   static_files: static/images/favicon.ico
   upload: static/images/favicon.ico
 
+- url: /stats.*
+  script: $PYTHON_LIB/google/appengine/ext/appstats/ui.py
+
 - url: /.*
   script: kumo.py
   
