--- a/app.yaml
+++ b/app.yaml
@@ -23,6 +23,10 @@ handlers:
   static_files: static/robots.txt
   upload: static/robots.txt
   
+- url: /marking.html
+  static_files: static/marking.html
+  upload: static/marking.html
+
 - url: /favicon.ico
   static_files: static/images/favicon.ico
   upload: static/images/favicon.ico
