hide deleted posts for users

--- a/index.yaml
+++ b/index.yaml
@@ -29,3 +29,9 @@ indexes:
   ancestor: yes
   properties:
   - name: date
+
+- kind: Post
+  ancestor: yes
+  properties:
+  - name: deleted
+  - name: date
